crates/swc_ecma_parser/tests/test262-error-references/fail/f6dc8a19882274b5.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/f6dc8a19882274b5.js:1:2
  |
1 | a\u12
  |  ^^^^

